# baas

./: .env.example  .gitignore  AGENTS.md  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_realtime.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/admin_api/: router.py
backend/app/api/internal/: auth_browse.py  billing_browse.py  nosql_browse.py  router.py  settings_browse.py  sql_browse.py  storage_browse.py  usage_browse.py
backend/app/api/superadmin/: _audit.py  router.py  users.py
backend/app/api/v1/ai/: router.py
backend/app/api/v1/auth/: router.py
backend/app/api/v1/db/: router.py
backend/app/api/v1/functions/: router.py
backend/app/api/v1/nosql/: router.py
backend/app/api/v1/storage/: router.py
backend/app/db/: postgres.py
backend/app/engines/: function_runner.py  nosql_engine.py  query_engine.py  realtime_engine.py  storage_engine.py  vector_engine.py
backend/app/middleware/: api_key.py  rate_limit.py  staff_auth.py  usage_limit.py
backend/app/models/: requests.py
backend/app/provisioner/: nosql_provisioner.py  sql_provisioner.py
backend/app/storage/: minio.py
backend/app/tasks/: usage_sync.py
frontend/: README.md  (+5 more)
sdk/python/: .env.example  pyproject.toml
sdk/python/src/baas/: __init__.py  client.py
sdk/python/src/baas/modules/: __init__.py  auth.py  database.py  functions.py  kv.py  nosql.py  realtime.py  storage.py
sdk/python/src/baas/types/: __init__.py  filters.py
sdk/python/tests/: test_client.py  test_database.py  test_errors.py  test_kv.py  test_nosql.py  test_storage.py
(+164 files in other folders)
