[build-system]
requires = ["hatchling>=1.15.1"]
build-backend = "hatchling.build"

[project]
name = "baas"
version = "0.1.0"
description = "YourBaaS Python SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[tool.hatch.build]
targets = ["sdist", "wheel"]

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.16",
]
